feat: regen from updated blueprint (embedding fixes, .env, fake model, AI e2e); harness + script updates
- regenerated all 3 apps from generator-jhipster-ai-postgresql: PATCH embedding
  regeneration fix, embedding lifecycle ITs, .env.example + .gitignore .env
  entry, EmbeddingConfiguration .env fallback + deterministic fake model,
  cypress AI-search smoke + embedding-lifecycle e2e specs
- harness: renamed run-all-tests.sh -> saathratri-run-all-tests.sh (+ new
  saathratri-run-all-tests.bat Git Bash wrapper; resolves Git Bash explicitly,
  not the WSL bash shim), compile-saathratri-dev.* -> saathratri-compile-dev.*;
  cypress now runs HEADED by default (--headless to opt out); the e2e phase
  exports OPENAI_EMBEDDING_FAKE + CYPRESS_fakeEmbeddings so the lifecycle spec
  runs offline
- saathratri-deploy: start Keycloak with --wait and the JHipster Registry only
  after it (sequential, one tab) — fixes the registry exiting(1) on eager OIDC
  discovery and the psqlgateway_default network-creation race
- docs: key-supply options (yml / env var / .env) and fake-model notes
- verified: full harness ALL GREEN (backend 261, frontend 756, e2e 64 specs
  incl. the embedding lifecycle)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TsfLhC3Jrki6WmZckNGfSN