@@ -3,7 +3,6 @@ package com.saathratri.developer.blog.repository;
 import com.saathratri.developer.blog.domain.Post;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
@@ -34,7 +33,7 @@ public class PostRepositoryWithBagRelationshipsImpl implements PostRepositoryWit
 
     @Override
     public List<Post> fetchBagRelationships(List<Post> posts) {
-        return Optional.of(posts).map(this::fetchTags).orElse(Collections.emptyList());
+        return Optional.of(posts).map(this::fetchTags).orElse(List.of());
     }
 
     Post fetchTags(Post result) {
@@ -51,7 +50,7 @@ public class PostRepositoryWithBagRelationshipsImpl implements PostRepositoryWit
             .createQuery("select post from Post post left join fetch post.tags where post in :posts", Post.class)
             .setParameter(POSTS_PARAMETER, posts)
             .getResultList();
-        Collections.sort(result, (o1, o2) -> Integer.compare(order.get(o1.getId()), order.get(o2.getId())));
+        result.sort((o1, o2) -> Integer.compare(order.get(o1.getId()), order.get(o2.getId())));
         return result;
     }
 }
